--- a/Desafio_4_Etapa_Backend/src/main/resources/application.properties
+++ b/Desafio_4_Etapa_Backend/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-jwt.secret=segredoscilink
+jwt.secret=rigolao
