--- a/Desafio_4_Etapa_Backend/pom.xml
+++ b/Desafio_4_Etapa_Backend/pom.xml
@@ -59,6 +59,16 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>21.7.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ucp</artifactId>
+            <version>21.7.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
