--- a/Desafio_4_Etapa_Backend/src/main/resources/application.properties
+++ b/Desafio_4_Etapa_Backend/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/scilink-db
-spring.datasource.username=postgres
-spring.datasource.password=admin14
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=SCILINK_USER
+spring.datasource.password=scilink_pass
 
 jwt.secret=rigolao
+
+server.port=8081
