--- a/Desafio_4_Etapa_Backend/pom.xml
+++ b/Desafio_4_Etapa_Backend/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>ucp</artifactId>
             <version>21.7.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.5</version>
+        </dependency>
     </dependencies>
 
     <build>
