Setando Timezone para Brasil / Validação data de nascimento

--- a/Desafio_4_Etapa_Backend/src/main/resources/application.properties
+++ b/Desafio_4_Etapa_Backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=scilink_pass
 jwt.secret=rigolao
 
 server.port=8081
+
+spring.jackson.time-zone=Brazil/East
+spring.jackson.locale=pt-BR
