--- a/Desafio_4_Etapa_Backend/pom.xml
+++ b/Desafio_4_Etapa_Backend/pom.xml
@@ -15,6 +15,7 @@
     <description>Desafio_4_Etapa_Backend</description>
     <properties>
         <java.version>17</java.version>
+        <spring-boot.run.jvmArguments>-Duser.timezone=GMT3</spring-boot.run.jvmArguments>
     </properties>
     <dependencies>
         <dependency>
@@ -37,6 +38,11 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
